--- a/src/styles/productCard.scss
+++ b/src/styles/productCard.scss
@@ -49,3 +49,8 @@
     font-size: 1.2rem;
     text-decoration: line-through;
 }
+
+.product-qty {
+    font-size: 1.1rem;
+    padding: 0 0.4rem;
+}
